2006-09-03  Stipe Tolj  <stolj at kannel.org>
  * gw/other_smskannel.conf: fixed deprecated option for fakesmsc's port
    to -r instead of old -p. Thanks to Tiago PC <tpcordeiro@gmail.com>
    for reporting this.
    [Msg-Id: <2055f52c0609041159w72da5467g23ca3bb1da6f17dd@mail.gmail.com>]

2006-08-28  Stipe Tolj  <stolj at kannel.org>
  * gwlib/semaphore.c: type fixes. NLC. Thanks to Vincent for the catch.
    [Msg-Id: <02c201c6ca8f$ce465e10$9600a8c0@vince>]
  
2006-08-28  Stipe Tolj  <stolj at kannel.org>
  * gwlib/cfg.def, doc/userguide/userguide.xml, gw/smsbox.c: adding config 
    directive 'max-pending-requests' for smsbox group to control the
    outbound requests stream generated from smsbox towards HTTP application
    servers. Thanks to Giulio Harding <giulio.harding@mnetcorporation.com> for
    doing detailed analysis and problem report. Patch provided by Alex.
    [Msg-Id: <op.tesvz1fpran2ed@ppc.local>]

2006-07-23  Stipe Tolj  <stolj at kannel.org>
  * gwlib/dbpool.h, gwlib/dbpool_sqlite3.c: fixing naming scheme to reflect 
    the sqlite3 version.
    
2006-07-23  Stipe Tolj  <stolj at kannel.org>
  * gwlib/cfg.def: add multi-group 'sqlite3-connection' to be used for various
    usage of sqlite3 support of dbpool.

2006-07-12  Alexander Malysh <amalysh at kannel.org>
  * doc/userguide/userguide.xml, gw/smsbox.c, gwlib/cfg.def: applied patch
    that adds two new config options to smsbox group: bearerbox-port and
    bearerbox-port-ssl. This patch should help external modules at least
    sqlbox now.

2006-07-07  Stipe Tolj  <stolj at kannel.org>
  * gw/smsc/smpp_pdu.c: added a new string for smpp_error_to_string() 
    indicating that we have a value in the vendor-specific range. NLC.
  * gw/smsc/smsc_http.c: changed email reference. NLC.

2006-07-05  Stipe Tolj  <stolj at kannel.org>
  * gwlib/cfg.[ch]: adding support for hooking config group definition files
    as our own gwlib/cfg.def from external add-on modules to the core via